# bevy_histrion_proto

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
assets/: mega_dlc.proto.json
assets/prototypes/: alone.proto.json  effects.proto.json  prototypes.proto.json  swords.proto.json
bevy_histrion_proto_derive/: Cargo.toml
bevy_histrion_proto_derive/src/: attributes.rs  lib.rs
examples/basics/: basic.rs  prototypes.rs  schema.rs
src/: identifier.rs  lib.rs  prototype.rs  registry.rs  schema.rs
