[package]
name = "bevy_histrion_proto_derive"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
default = []
schemars = []

[dependencies]
proc-macro2-diagnostics = "0.10"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }

[lints]
workspace = true
